2011-05-01  Per Bothner  <per@bothner.com>

	* Declaration.java (initValue): Field new,
	(getInitValue, setInitValue): New methods.
	(ValueSource.getValue): Take declaration parameter. Make non-public.
	* LetExp.java (init): Remove field.  Instead use Declaration's
	initValue field.
	(<init>): Update to not take init array.
	(evalVariable): Take declarations rather than index.
	(apply, store_rest, compile, visitInitializers, print): Update.
	* Compilation.java (letStart, letVariable, letEnter, loopStart):
	Update for new LetExp representation.
	(letEnter, letDone): Change how to detect if letEnter has been called.
	* FindTailCalls.java (visitLetExp): Update for LetExp changes.
	* FindCapturedVars.java (visitLetExp): Likewise.
	* InlineCalls.java (visitLetExp, inlineCall): Likewise.
	* CatchClause.java: Update to match super-class changes.
	* FluidLetExp.java: Likewise.
	* ScopeExp.java (countNonDynamicDecls): Remove no-longer-used method.

	* Declaration.java (<init>): Remove unused protected constructor.
	Implement others in terms of (Object,Type)-taking constructor.

2011-04-18  Per Bothner  <per@bothner.com>

	Implement a data-flow framework, similar to Single Static Assignment.
	* VarValueTracker.java: New class.  Keep track of variable "values".
	* Makefile.am: Update accordingly.
	* Declaration.java (getType): More sophistcated computations.
	If there are multiple possible values, take their union.
	However, use a special case for arithmetic assignments like
	'(set! D (+ D V))' where D is the current Declaration.  In that case
	we can use the type of V, instead of the unknown type of (+ D V),
	to inductively determine the type of D.
	(MAYBE_UNINITIALIZED_ACCESS): New flag.
	(mayBeAccessedUninitialized): New method.
	(numReferences): New field.
	(getLambdaValue): New convenience method.
	* LambdaExp.java (siblingReferences): New field.
	* PushApply.java (visitReferenceExp): Build siblingReferences chain.
	* SetExp.java (valueIndex): New field.